# flutter-hybrid

android-flutter/: README.MD  build.gradle  gradle.properties  settings.gradle
android-flutter/app/: build.gradle
android-flutter/app/src/main/cpp/: CMakeLists.txt  Demo.cpp  Demo.h  GVMHolder.cpp  GVMHolder.h  Singleton.cpp  Singleton.h  WfirstRWLock.h  com_zw_android_flutter_JNITest.cpp  com_zw_android_flutter_JNITest.h  com_zw_android_flutter_activity_demo_CPPActivity.cpp  com_zw_android_flutter_activity_demo_CPPActivity.h  com_zw_android_flutter_activity_demo_NativeActivity.cpp  com_zw_android_flutter_activity_demo_NativeActivity.h  com_zw_android_flutter_activity_demo_ProfilerActivity.cpp  com_zw_android_flutter_activity_demo_ProfilerActivity.h  com_zw_android_flutter_activity_demo_STLActivity.cpp  com_zw_android_flutter_activity_demo_STLActivity.h  native-lib.cpp  register.cpp  register.h  test1.cpp  test2.cpp  test2.h
android-flutter/app2/: build.gradle
android-flutter/app2/src/main/cpp/: CMakeLists.txt  com_zw_app2_NativeTest1.cpp  com_zw_app2_NativeTest1.h
android-flutter/gradle/wrapper/: gradle-wrapper.properties
android-flutter/mylibrary/: build.gradle
android-flutter/mylibrary2/: build.gradle
flutter_module/: README.md  环境搭建.md
flutter_module/lib/: main.dart
flutter_module/lib/test0/: Person.dart
ios-flutter/: .gitignore  Podfile
ios-flutter/ios-flutter/: AppDelegate.h  AppDelegate.m
ios-flutter/ios-flutter.xcodeproj/: project.pbxproj
ios-flutter/ios-flutter.xcworkspace/: contents.xcworkspacedata
(+180 files in other folders)
